# DataAgent

./: .env.example  .gitignore  README.md  opencode.json  pyproject.toml  requirements.txt
app/: config.py  factory.py  main.py
app/agents/: analyst.py  base.py  coordinator.py  data_engineer.py  reporter.py  reviewer.py  tool_loop.py  visualizer.py
app/api/: __init__.py  routes.py  websocket.py
app/core/: __init__.py  artifacts.py  bus.py  context.py  eda.py  orchestrator.py  sandbox.py
app/history/: __init__.py
app/llm/: client.py
app/tools/: __init__.py  analysis_tools.py  chart_tools.py  data_tools.py  export_tools.py  registry.py  smart_chart_tools.py
app/utils/: cache.py  language.py  logger.py  metrics.py  serialization.py
data/: sales_data.csv  sample_sales.csv
docs/compose/plans/: 2026-06-12-data-agent-plan.md
docs/compose/specs/: 2026-06-12-data-agent-design.md
docs/superpowers/plans/: 2026-06-12-dataagent-bugfix.md
frontend/: app.py  i18n.py
tests/: test_advanced_features.py  test_agent_quality.py  test_agents.py  test_api_routes.py  test_bus.py  test_context.py  test_demo_full_pipeline.py  test_execution_engine.py  test_frontend_i18n.py  test_history.py  test_integration.py  test_safety_regressions.py  test_tool_loop.py  test_tools.py
