[project]
name = "dataagent"
version = "1.0.0"
description = "AI-Powered Multi-Agent Data Analysis System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.1",
    "uvicorn==0.30.3",
    "openai==1.40.3",
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "scipy==1.14.0",
    "scikit-learn==1.5.1",
    "matplotlib==3.9.1",
    "plotly==5.22.0",
    "seaborn==0.13.2",
    "streamlit==1.37.0",
    "sqlalchemy==2.0.31",
    "httpx==0.27.0",
    "openpyxl==3.1.5",
    "pyarrow==17.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
